Fixes potential crash when toggling accessibility services

Bug: 887235
Change-Id: Id5aed4e8030ae0d8db02d369bf61772444b441ad
Reviewed-on: https://chromium-review.googlesource.com/c/1286905
Commit-Queue: David Tseng <dtseng@chromium.org>
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Cr-Commit-Position: refs/heads/master@{#600924}
Former-commit-id: 01a2d8ab84c37ee250db4fe0314776b81b0cf24a