chrome/browser/chromeos/accessibility/spoken_feedback_event_rewriter_delegate.cc
@@ -35,6 +35,9 @@ void SpokenFeedbackEventRewriterDelegate::DispatchKeyEventToChromeVox(
     bool capture) {
   extensions::ExtensionHost* host = chromeos::GetAccessibilityExtensionHost(
       extension_misc::kChromeVoxExtensionId);
+  if (!host)
+    return;
+
   // Listen for any unhandled keyboard events from ChromeVox's background page
   // when capturing keys to reinject.
   host->host_contents()->SetDelegate(capture ? this : nullptr);
@@ -47,6 +50,9 @@ void SpokenFeedbackEventRewriterDelegate::DispatchMouseEventToChromeVox(
     std::unique_ptr<ui::Event> event) {
   extensions::ExtensionHost* host = chromeos::GetAccessibilityExtensionHost(
       extension_misc::kChromeVoxExtensionId);
+  if (!host)
+    return;
+
   // Forward the event to ChromeVox's background page.
   chromeos::ForwardMouseToExtension(*(event->AsMouseEvent()), host);
 }
